--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_API="http://localhost:4893/v1/Backend-Partner"
+VUE_APP_API="https://api.nbadigital.tech/v1/Backend-Partner"
 VUE_APP_API2= "https://api.nbadigital.tech/ddsc-office"
 
 # VUE_APP_API="https://api.nbadigital.tech/v1/Backend-Smartpro"
