--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
-VUE_APP_API="https://api.nbadigital.tech/v1/Backend-Partner"
-VUE_APP_API2= "https://api.nbadigital.tech/ddsc-office"
-
-
-
-
 VUE_APP_THAILAND="https://api.nbadigitalservice.com/v1/nba-shop/"
+#production
+#VUE_APP_API="https://api.nbadigital.tech/v1/Backend-Partner"
+#VUE_APP_OFFICE= "https://api.nbadigital.tech/ddsc-office"
+#VUE_APP_CONTACT="https://api.nbadigital.tech/contract/"
+#dev
+VUE_APP_API="https://api.nbadigital.tech/v1/Backend-Partner"
+VUE_APP_OFFICE= "https://api.nbadigital.tech/ddsc-office"
+VUE_APP_CONTACT="https://api.nbadigital.tech/contract"
+
