--- a/.env
+++ b/.env
@@ -3,9 +3,15 @@ VUE_APP_THAILAND="https://api.nbadigitalservice.com/v1/nba-shop/"
 # VUE_APP_API="https://api.nbadigitalservice.com/v1/Backend-Partner"
 # VUE_APP_OFFICE= "https://api.nbadigitalservice.com/ddsc-office"
 # VUE_APP_CONTACT="https://api.nbadigitalservice.com/contract/"
+# VUE_APP_API="https://api.nbadigitalservice.com/v1/Backend-Partner"
+# VUE_APP_OFFICE= "https://api.nbadigitalservice.com/ddsc-office"
+# VUE_APP_CONTACT="https://api.nbadigitalservice.com/contract/"
+
 #dev
 # VUE_APP_API="http://api.tossaguns.online/v1/Backend-Partner"
-VUE_APP_API="http://localhost:9995/v1/Backend-Partner"
-VUE_APP_OFFICE= "http://api.tossaguns.online/ddsc-office"
-VUE_APP_CONTACT="http://api.tossaguns.online/contract"
-
+# VUE_APP_API="http://localhost:9995/v1/Backend-Partner"
+# VUE_APP_OFFICE= "http://api.tossaguns.online/ddsc-office"
+# VUE_APP_CONTACT="http://api.tossaguns.online/contract"
+VUE_APP_API="http://147.50.183.59:9995/v1/Backend-Partner"
+VUE_APP_OFFICE= "http://147.50.183.59:9996/ddsc-office"
+# VUE_APP_CONTACT="http://api.tossaguns.online/contract"
