--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@ VUE_APP_THAILAND="https://api.nbadigitalservice.com/v1/nba-shop/"
 # VUE_APP_API="http://localhost:9995/v1/Backend-Partner"
 # VUE_APP_OFFICE= "http://api.tossaguns.online/ddsc-office"
 # VUE_APP_CONTACT="http://api.tossaguns.online/contract"
+
 VUE_APP_API="http://ds7dd5.nbadigitalservice.com/v1/Backend-Partner"
 VUE_APP_OFFICE= "http://ds7dd5.nbadigitalservice.com/ddsc-office"
-# VUE_APP_CONTACT="http://api.tossaguns.online/contract"
+
+VUE_APP_CONTACT="http://ds7dd5.nbadigitalservice.com/contract"
