--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
 VUE_APP_THAILAND="https://api.nbadigitalservice.com/v1/nba-shop/"
 #production
-# VUE_APP_API="https://api.nbadigitalservice.com/v1/Backend-Partner"
-# VUE_APP_OFFICE= "https://api.nbadigitalservice.com/ddsc-office"
-# VUE_APP_CONTACT="https://api.nbadigitalservice.com/contract/"
-# VUE_APP_API="https://api.nbadigitalservice.com/v1/Backend-Partner"
-# VUE_APP_OFFICE= "https://api.nbadigitalservice.com/ddsc-office"
-# VUE_APP_CONTACT="https://api.nbadigitalservice.com/contract/"
+VUE_APP_API="https://ds7dd5.nbadigitalservice.com/v1/Backend-Partner"
+VUE_APP_OFFICE= "https://ds7dd5.nbadigitalservice.com/ddsc-office"
+VUE_APP_CONTACT="https://ds7dd5.nbadigitalservice.com/contract"
+
 
 #dev
 # VUE_APP_API="http://api.tossaguns.online/v1/Backend-Partner"
@@ -13,7 +11,3 @@ VUE_APP_THAILAND="https://api.nbadigitalservice.com/v1/nba-shop/"
 # VUE_APP_OFFICE= "http://api.tossaguns.online/ddsc-office"
 # VUE_APP_CONTACT="http://api.tossaguns.online/contract"
 
-VUE_APP_API="http://ds7dd5.nbadigitalservice.com/v1/Backend-Partner"
-VUE_APP_OFFICE= "http://ds7dd5.nbadigitalservice.com/ddsc-office"
-
-VUE_APP_CONTACT="http://ds7dd5.nbadigitalservice.com/contract"
